--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,10 +40,11 @@ jobs:
 #           token: ${{ secrets.MY_PERSONAL_ACTION_TOKEN }}
 
 #       - name: Label Commenter
-#         uses: peaceiris/actions-label-commenter@v1.3.2
-#         with:
-#           github_token: ${{ secrets.MY_ACTION_TOKEN }}
-#           config_file: .github/label-commenter-config01.yml
+      - uses: peaceiris/actions-label-commenter@v1.3.2
+        if: github.event.action == 'labeled' || github.event.action == 'unlabeled' 
+        with:
+           github_token: ${{ secrets.MY_ACTION_TOKEN }}
+           config_file: .github/label-commenter-config01.yml
  
       - name: Assign 'FEATURE REQUEST' to 'TRIAGE - FEATURE REQUEST'
         uses: srggrs/assign-one-project-github-action@1.2.0
