--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
       - uses: peaceiris/actions-label-commenter@v1.3.2
         if: github.event.action == 'labeled' || github.event.action == 'unlabeled' 
         with:
-           github_token: ${{ secrets.MY_ACTION_TOKEN }}
+           #github_token: ${{ secrets.MY_ACTION_TOKEN }}
            config_file: .github/label-commenter-config01.yml
  
       - name: Assign 'FEATURE REQUEST' to 'TRIAGE - FEATURE REQUEST'
