--- a/.github/card-labeler.yml
+++ b/.github/card-labeler.yml
@@ -1,6 +1,6 @@
 TRIAGE - Feature Request:
   'UP NEXT':
-    - '1 - Planning'
+    - 'need specification'
   'IN FUTURE':
     - '0 - Backlog'
   'IN DISCUSSION':
