--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ env:
   GITHUB_TOKEN: ${{ secrets.MY_PERSONAL_ACTION_TOKEN }}
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  triage: #GitHub actions that automatically labels Issues or PullRequests based on project card moves
+  triage: 
 #    needs: [assign_one_project]
 #    if: github.event_name == 'project_card'
     name: Auto card labeler
@@ -28,24 +28,25 @@ jobs:
           # so that tag pushes trigger repo push events.
           token: ${{ secrets.MY_PERSONAL_ACTION_TOKEN }}
       
-      - uses: technote-space/auto-card-labeler@v1
+      - uses: technote-space/auto-card-labeler@v1 #GitHub actions that automatically labels Issues or PullRequests based on project card moves
         with:
             # Secret GitHub API token to use for making API requests.
           GITHUB_TOKEN: ${{ secrets.MY_PERSONAL_ACTION_TOKEN }}
             # Config file name.
             #CONFIG_FILENAME: # default is card-labeler.yml
-      - uses: timheuer/issue-notifier@v1
-        env:
-          SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
-        with:
-          fromMailAddress: 'q4j4v5e8z5w0j0m0@seli-wp4.slack.com'
-          toMailAddress: 'q4j4v5e8z5w0j0m0@seli-wp4.slack.com'
-          subject: 'New feature ready to specification'
-          subjectPrefix: ''
-          labelsToMonitor: "1 - Planning"
-          verbose: true
+
+#       - uses: timheuer/issue-notifier@v1
+#         env:
+#           SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
+#         with:
+#           fromMailAddress: 'q4j4v5e8z5w0j0m0@seli-wp4.slack.com'
+#           toMailAddress: 'q4j4v5e8z5w0j0m0@seli-wp4.slack.com'
+#           subject: 'New feature ready to specification'
+#           subjectPrefix: ''
+#           labelsToMonitor: "1 - Planning"
+#           verbose: true
  
-#   comment: #Label triggered GitHub Actions for posting a template message, automatically close or reopen issues or pull requests
+#   mail: 
 #     needs: [triage, assign_one_project]
 #     if: github.event.action == 'labeled' || github.event.action == 'unlabeled' 
 #     runs-on: ubuntu-18.04
@@ -55,8 +56,9 @@ jobs:
 #           ref: master
 #           token: ${{ secrets.MY_PERSONAL_ACTION_TOKEN }}
 
+#commenter
 #       - name: Label Commenter
-      - uses: peaceiris/actions-label-commenter@v1.3.2
+      - uses: peaceiris/actions-label-commenter@v1.3.2 #Label triggered GitHub Actions for posting a template message, automatically close or reopen issues or pull requests
         if: github.event.action == 'labeled' || github.event.action == 'unlabeled' 
         with:
            github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -80,7 +82,9 @@ jobs:
         
       - name: Assign '1 - PLANNING' label to 'FEATURE SPECIFICATION'
         uses: srggrs/assign-one-project-github-action@1.2.0
-        if: contains(github.event.issue.labels.*.name, '1 - Planning')
+        if: |
+          contains(github.event.issue.labels.*.name, '1 - Planning') ||
+          contains(github.event.issue.labels.*.name, 'needs triage')
         with:
           project: 'https://github.com/ecureuill/SELIProject/projects/4'
           column_name: 'PENDING FEATURE REQUEST'
