--- a/.github/card-labeler.yml
+++ b/.github/card-labeler.yml
@@ -27,7 +27,7 @@ DEVELOPMENT CYCLE:
 
 FUNCTIONALITY TEST:
   'TO-DO':
-    #- 'need tester'
+    - 'need tester'
     - '3 - Working'
   'IN PROGRESS':
     - '4 - In Review'
