--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,14 +66,14 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           issue-number: 59
           body: |
-              ${{github.event.name }} 
+              ${{github.event.event_name }} 
               ${{github.event.action}} 
               ${{contains(github.event.issue.labels.*.name, 'test-FTfailed')}}
           reaction-type: '+1'
       - name: Create comment
         uses: peter-evans/create-or-update-comment@v1
         if: |
-          github.event.name == 'issues' && 
+          github.event.event_name == 'issues' && 
           github.event.action == 'labeled' &&
           contains(github.event.issue.labels.*.name, 'test-FTfailed')
         with:
