--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,9 +67,11 @@ jobs:
           issue-number: 59
           body: |
               *Verbose*
-              ${{github.event_name }} 
-              ${{github.event.action}} 
-              ${{github.project_card.column_id}} 
+              event_name: ${{github.event_name }} 
+              event.action: ${{github.event.action}} 
+              project_card.column_id: ${{github.event.project_card.column_id}} 
+              event.project.id: ${{github.event.project.id}} 
+              project.id: ${{github.project.id}} 
               
           reaction-type: '+1'
       - name: Create comment
