--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,19 +74,19 @@ jobs:
               project.id: ${{github.project.id}} 
               
           reaction-type: '+1'
-      - name: Create comment
-        uses: peter-evans/create-or-update-comment@v1
-        if: |
-          github.event_name == 'project_card' && 
-          github.event.action == 'moved' &&
-          github.event.project_card.column_id == 8389382
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          issue-number: 59
-          body: |
-            assignee:  ${{ github.event.issue.assignee.login }} 
-            @${{ github.event.issue.assignee.login }} 
-          reaction-type: '+1'
+#       - name: Create comment
+#         uses: peter-evans/create-or-update-comment@v1
+#         if: |
+#           github.event_name == 'project_card' && 
+#           github.event.action == 'moved' &&
+#           github.event.project_card.column_id == 8389382
+#         with:
+#           token: ${{ secrets.GITHUB_TOKEN }}
+#           issue-number: 59
+#           body: |
+#             assignee:  ${{ github.event.issue.assignee.login }} 
+#             @${{ github.event.issue.assignee.login }} 
+#           reaction-type: '+1'
 
 #       - name: Assign 'FEATURE REQUEST' to 'TRIAGE - FEATURE REQUEST'
 #         uses: srggrs/assign-one-project-github-action@1.2.0
